--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 placeholder="Ex.: 65"
               />
             </label>
-            <label
-              >Altura:
+            <label>
+              Altura:
               <input
                 type="number"
                 name="altura"
