--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 
   <body>
     <header>
-      <h1>Entre no</h1>
-      <h1><span>jogo</span></h1>
+      <h1>Entre no <span>jogo</span></h1>
     </header>
     <section>
       <form>
         <div id="content-form" class="content">
           <div class="dataname">
             <label
-              >Nome:
+              >Nome
               <input
                 type="text"
                 name="name"
@@ -31,7 +30,7 @@
           </div>
           <div class="datadate">
             <label
-              >Ano de nascimento:
+              >Ano de nascimento
               <input
                 type="number"
                 name="date"
@@ -41,7 +40,7 @@
                 required
             /></label>
             <label
-              >Peso:
+              >Peso
               <input
                 type="number"
                 name="peso"
@@ -50,7 +49,7 @@
               />
             </label>
             <label>
-              Altura:
+              Altura
               <input
                 type="number"
                 name="altura"
@@ -60,7 +59,7 @@
               />
             </label>
             <label
-              >Tipo sanguineo:
+              >Tipo sanguineo
               <input
                 type="text"
                 name="blood"
