Componentizando divs no html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             id="cardbtn"
             type="button"
             value="Gerar identificação"
-            onclick="show()"
+            onclick="changeVisible()"
           />
         </div>
 
@@ -97,7 +97,7 @@
           id="formbtn"
           type="button"
           value="Voltar para o formulário"
-          onclick="hide()"
+          onclick="changeHidden()"
         />
       </div>
     </section>
@@ -128,9 +128,6 @@
       </div>
     </div>
 
-    <footer>
-      <p>&copy; <a href="https://github.com/Alljuly">Alljuly</a></p>
-    </footer>
     <script src="script.js"></script>
   </body>
 </html>
