--- a/index.html
+++ b/index.html
@@ -16,12 +16,48 @@
       <form>
         <div id="content-form" class="content">
           <custom-fieldset 
-            className="dataname" 
+            className="form_fielset" 
             id="name" 
             name="name" 
-            placeholder="First Name" 
+            placeholder="Chuck" 
+            type="text"
             require="True"> 
           </custom-fieldset>
+
+          <custom-fieldset 
+            className="form_fielset" 
+            id="height" 
+            name="height"
+            placeholder="1.76" 
+            type="number"
+            require="True"> 
+          </custom-fieldset>
+
+          <custom-fieldset 
+            className="form_fielset" 
+            id="blood" 
+            name="blood" 
+            type="text"
+            placeholder="O+" 
+            require="True"> 
+          </custom-fieldset>
+
+          <custom-fieldset 
+            className="form_fielset" 
+            id="weigth" 
+            name="weigth" 
+            placeholder="64.8" 
+            require="True"> 
+          </custom-fieldset>
+
+          <custom-fieldset 
+            className="form_fielset" 
+            id="birthday" 
+            name="birthday" 
+            placeholder="1998" 
+            require="True"> 
+          </custom-fieldset>          
+
         </div>
       </form>
 
